<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanDemo</string>
    <string name="action_home">首页</string>
    <string name="action_scan">扫描</string>
    <string name="action_catalog">分类</string>
    <string name="action_settings">网络设置</string>

    <string name="hello_world">Hello , 请选择操作项目 !</string>
    <string name="hello_catalog">Hello , 请选择分类 !</string>
    
    
    
   	<string name="btn_scan">马上扫一扫</string>
    <string name="btn_search">去分类查询</string>
    
    
    <string name ="dimension_content">对准二维码 即可自动扫描</string>
    
    <string name="msg_loading_data">数据加载中...</string>
    	<string name="msg_error_newwork">当前网络不可用\n请检查网络设置</string>
    	<string name="msg_error_service">请求失败，请联系管理员！</string>

</resources>
