<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_home"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_home"/>
     <item
        android:id="@+id/action_scan"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_catalog"
        android:icon="@drawable/icon_catalog"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_catalog"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/icon_settings"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>