<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
         >

        <TextView
            android:id="@+id/title_main"
            android:text="@string/hello_world" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_scan"
            android:text="@string/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="clickScan"
             />

        <Button
            android:id="@+id/btn_search"
            android:text="@string/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_scan"
            android:layout_alignLeft="@id/btn_scan"
            android:layout_marginTop="20dp"
             />
    </RelativeLayout>

</RelativeLayout>